# listdisk-rs

./: Cargo.toml
examples/: diskdrive.rs  freespace.rs  full_usage.rs  list_drives.rs  list_volume.rs
src/: lib.rs
src/win32/: mod.rs
src/win32/drive_info/: mod.rs
src/win32/freespace/: mod.rs
src/win32/logical_drives/: mod.rs
src/win32/volume/: mod.rs
