[package]
name = "listdisk-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["volume"]
volume = [
    "dep:encoding_rs",
    "dep:windows-sys",
    "windows-sys/Win32_Foundation",
    "windows-sys/Win32_Storage_FileSystem",
]

[dependencies]
log = "0.4.22"

encoding_rs = { version = "0.8.35", optional = true, features = ["simd-accel"] }
windows-sys = { version = "0.59.0", optional = true }

[dev-dependencies]
anyhow = "1"
pretty_env_logger = "0.5"

[[example]]
name = "list_volume"
required-features = ["volume"]
