[package]
name = "listdisk-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["volume", "logical-drives", "freespace", "drive-info", "serde"]
volume = ["encoding", "win32_sys", "win32_sys_foundation"]
logical-drives = ["win32_sys", "win32_sys_foundation", "dep:bitvec"]
freespace = ["win32_sys"]
drive-info = ["wmi"]

encoding = ["dep:utf16string"]
win32_sys = ["dep:windows-sys", "windows-sys/Win32_Storage_FileSystem"]
win32_sys_foundation = ["windows-sys/Win32_Foundation"]
wmi = ["dep:wmi"]
serde = ["dep:serde"]

[dependencies]
log = "0.4.22"

utf16string = { version = "0.2.0", optional = true }
windows-sys = { version = "0.59.0", optional = true }
bitvec = { version = "1.0.1", optional = true, default-features = false, features = [
    "alloc",
] }
wmi = { version = "0.14.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2.0.9"

[dev-dependencies]
anyhow = "1"
byte-unit = { version = "5.1.6", default-features = false, features = ["byte", "u128"] }
pretty_env_logger = "0.5"

[[example]]
name = "list_volume"
required-features = ["volume"]

[[example]]
name = "list_drives"
required-features = ["logical-drives"]

[[example]]
name = "freespace"
required-features = ["freespace", "encoding"]

[[example]]
name = "diskdrive"
required-features = ["drive-info", "serde"]

[[example]]
name = "full_usage"
required-features = ["default"]
